--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -360,16 +360,19 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="db41dd600f7f48509e6a7aebfc35a0b8-b5e0199d31a24c818f489c195d08b31d" name="db41dd600f7f48509e6a7aebfc35a0b8" class="tab" checked><label for="db41dd600f7f48509e6a7aebfc35a0b8-b5e0199d31a24c818f489c195d08b31d" >General</label>
-<input type="radio" id="db41dd600f7f48509e6a7aebfc35a0b8-b6e3cb02142d4bd48d21ce71eb4d1665" name="db41dd600f7f48509e6a7aebfc35a0b8" class="tab" ><label for="db41dd600f7f48509e6a7aebfc35a0b8-b6e3cb02142d4bd48d21ce71eb4d1665" >Startup</label>
-<input type="radio" id="db41dd600f7f48509e6a7aebfc35a0b8-367a83007fb5422b83fb6065feacb57b" name="db41dd600f7f48509e6a7aebfc35a0b8" class="tab" ><label for="db41dd600f7f48509e6a7aebfc35a0b8-367a83007fb5422b83fb6065feacb57b" >Android</label>
-<input type="radio" id="db41dd600f7f48509e6a7aebfc35a0b8-e3b09e90fa8d41b1aca1d4146d214b5d" name="db41dd600f7f48509e6a7aebfc35a0b8" class="tab" ><label for="db41dd600f7f48509e6a7aebfc35a0b8-e3b09e90fa8d41b1aca1d4146d214b5d" >iOS</label>
+<input type="radio" id="f00260e3a7b54635b2847c63a683a57b-cd0bc35cc4ce4be9ac30ad9da6dd8486" name="f00260e3a7b54635b2847c63a683a57b" class="tab" checked><label for="f00260e3a7b54635b2847c63a683a57b-cd0bc35cc4ce4be9ac30ad9da6dd8486" >General</label>
+<input type="radio" id="f00260e3a7b54635b2847c63a683a57b-9c986e9c0ed1454db144f688b9baeec1" name="f00260e3a7b54635b2847c63a683a57b" class="tab" ><label for="f00260e3a7b54635b2847c63a683a57b-9c986e9c0ed1454db144f688b9baeec1" >Startup</label>
+<input type="radio" id="f00260e3a7b54635b2847c63a683a57b-c9da6ab0a11c484e915501fee38412d9" name="f00260e3a7b54635b2847c63a683a57b" class="tab" ><label for="f00260e3a7b54635b2847c63a683a57b-c9da6ab0a11c484e915501fee38412d9" >Android</label>
+<input type="radio" id="f00260e3a7b54635b2847c63a683a57b-d80129da60f14aae8839555b1e1d1cc7" name="f00260e3a7b54635b2847c63a683a57b" class="tab" ><label for="f00260e3a7b54635b2847c63a683a57b-d80129da60f14aae8839555b1e1d1cc7" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
