--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -358,7 +358,10 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -379,11 +382,11 @@
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="b0b725ffc6a54186a6773712de32e079-b33bd4001cc9441984f4aa17cb06a74d" name="b0b725ffc6a54186a6773712de32e079" class="tab" checked=""><label for="b0b725ffc6a54186a6773712de32e079-b33bd4001cc9441984f4aa17cb06a74d">General</label>
-<input type="radio" id="b0b725ffc6a54186a6773712de32e079-b5008e622ae8457fa2e2a5505bad6f52" name="b0b725ffc6a54186a6773712de32e079" class="tab"><label for="b0b725ffc6a54186a6773712de32e079-b5008e622ae8457fa2e2a5505bad6f52">Startup</label>
-<input type="radio" id="b0b725ffc6a54186a6773712de32e079-3981c89232a24b03ac26ca2eb325c0ff" name="b0b725ffc6a54186a6773712de32e079" class="tab"><label for="b0b725ffc6a54186a6773712de32e079-3981c89232a24b03ac26ca2eb325c0ff">Android</label>
-<input type="radio" id="b0b725ffc6a54186a6773712de32e079-03ba45eccd7f47bfa46c6aa2541bf2cc" name="b0b725ffc6a54186a6773712de32e079" class="tab"><label for="b0b725ffc6a54186a6773712de32e079-03ba45eccd7f47bfa46c6aa2541bf2cc">iOS</label>
-<input type="radio" id="b0b725ffc6a54186a6773712de32e079-b438583eb9494d1fb4d9ea4abc381832" name="b0b725ffc6a54186a6773712de32e079" class="tab"><label for="b0b725ffc6a54186a6773712de32e079-b438583eb9494d1fb4d9ea4abc381832">Windows</label>
+<input type="radio" id="278b2275868449f1a64c5fd4b5be8612-c4736939782c4f00ae954ed94370ae8b" name="278b2275868449f1a64c5fd4b5be8612" class="tab" checked=""><label for="278b2275868449f1a64c5fd4b5be8612-c4736939782c4f00ae954ed94370ae8b">General</label>
+<input type="radio" id="278b2275868449f1a64c5fd4b5be8612-edc61a13d4a74ed189abdc67710f1753" name="278b2275868449f1a64c5fd4b5be8612" class="tab"><label for="278b2275868449f1a64c5fd4b5be8612-edc61a13d4a74ed189abdc67710f1753">Startup</label>
+<input type="radio" id="278b2275868449f1a64c5fd4b5be8612-93e1d26e047d4f9f9e1c49d3ee55072c" name="278b2275868449f1a64c5fd4b5be8612" class="tab"><label for="278b2275868449f1a64c5fd4b5be8612-93e1d26e047d4f9f9e1c49d3ee55072c">Android</label>
+<input type="radio" id="278b2275868449f1a64c5fd4b5be8612-41db2ff4bfc74d37b9369e9632246426" name="278b2275868449f1a64c5fd4b5be8612" class="tab"><label for="278b2275868449f1a64c5fd4b5be8612-41db2ff4bfc74d37b9369e9632246426">iOS</label>
+<input type="radio" id="278b2275868449f1a64c5fd4b5be8612-9d5cb03d8d3849c68beab5bafe9914a6" name="278b2275868449f1a64c5fd4b5be8612" class="tab"><label for="278b2275868449f1a64c5fd4b5be8612-9d5cb03d8d3849c68beab5bafe9914a6">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
