--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="166c2347f0fb477b9de666d3032374b1-61f22370879d4821b0d614bece518044" name="166c2347f0fb477b9de666d3032374b1" class="tab" checked><label for="166c2347f0fb477b9de666d3032374b1-61f22370879d4821b0d614bece518044" >General</label>
-<input type="radio" id="166c2347f0fb477b9de666d3032374b1-a2844ca9d44144eba02b3b5d067b4d7e" name="166c2347f0fb477b9de666d3032374b1" class="tab" ><label for="166c2347f0fb477b9de666d3032374b1-a2844ca9d44144eba02b3b5d067b4d7e" >Startup</label>
-<input type="radio" id="166c2347f0fb477b9de666d3032374b1-fbeb11aca18440a3a32896ab83ef4b82" name="166c2347f0fb477b9de666d3032374b1" class="tab" ><label for="166c2347f0fb477b9de666d3032374b1-fbeb11aca18440a3a32896ab83ef4b82" >Android</label>
-<input type="radio" id="166c2347f0fb477b9de666d3032374b1-035f9051af5941fcbfa62f88026d2fd9" name="166c2347f0fb477b9de666d3032374b1" class="tab" ><label for="166c2347f0fb477b9de666d3032374b1-035f9051af5941fcbfa62f88026d2fd9" >iOS</label>
-<input type="radio" id="166c2347f0fb477b9de666d3032374b1-c37ff8635f804d4e9836de6e2e66a220" name="166c2347f0fb477b9de666d3032374b1" class="tab" ><label for="166c2347f0fb477b9de666d3032374b1-c37ff8635f804d4e9836de6e2e66a220" >Windows</label>
+<input type="radio" id="93c226c922a34facb0becfab94e78980-8aa6f688a9174364b62168df13d9e24c" name="93c226c922a34facb0becfab94e78980" class="tab" checked><label for="93c226c922a34facb0becfab94e78980-8aa6f688a9174364b62168df13d9e24c" >General</label>
+<input type="radio" id="93c226c922a34facb0becfab94e78980-290864169ad947b0ac0f82761dabe722" name="93c226c922a34facb0becfab94e78980" class="tab" ><label for="93c226c922a34facb0becfab94e78980-290864169ad947b0ac0f82761dabe722" >Startup</label>
+<input type="radio" id="93c226c922a34facb0becfab94e78980-26a8f682d8124497af5f5d820c6918ba" name="93c226c922a34facb0becfab94e78980" class="tab" ><label for="93c226c922a34facb0becfab94e78980-26a8f682d8124497af5f5d820c6918ba" >Android</label>
+<input type="radio" id="93c226c922a34facb0becfab94e78980-b17b730446e2476ab7b4e4f9bfeed719" name="93c226c922a34facb0becfab94e78980" class="tab" ><label for="93c226c922a34facb0becfab94e78980-b17b730446e2476ab7b4e4f9bfeed719" >iOS</label>
+<input type="radio" id="93c226c922a34facb0becfab94e78980-023c625e323b44a7929547cbdadcb14e" name="93c226c922a34facb0becfab94e78980" class="tab" ><label for="93c226c922a34facb0becfab94e78980-023c625e323b44a7929547cbdadcb14e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
