--- a/locations/gps.html
+++ b/locations/gps.html
@@ -360,18 +360,21 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="b65b2e7bf94f4cc0903ebfb4b848c075-1622a53fa7554945bff882741e0abd77" name="b65b2e7bf94f4cc0903ebfb4b848c075" class="tab" checked><label for="b65b2e7bf94f4cc0903ebfb4b848c075-1622a53fa7554945bff882741e0abd77" >General</label>
-<input type="radio" id="b65b2e7bf94f4cc0903ebfb4b848c075-615c2a101b864fa58cd0795fb3ef236f" name="b65b2e7bf94f4cc0903ebfb4b848c075" class="tab" ><label for="b65b2e7bf94f4cc0903ebfb4b848c075-615c2a101b864fa58cd0795fb3ef236f" >Startup</label>
-<input type="radio" id="b65b2e7bf94f4cc0903ebfb4b848c075-9089bdad9c594ad6b18ff68e6afb473b" name="b65b2e7bf94f4cc0903ebfb4b848c075" class="tab" ><label for="b65b2e7bf94f4cc0903ebfb4b848c075-9089bdad9c594ad6b18ff68e6afb473b" >Android</label>
-<input type="radio" id="b65b2e7bf94f4cc0903ebfb4b848c075-c8e7e502c27e40a799430cb23543a4ce" name="b65b2e7bf94f4cc0903ebfb4b848c075" class="tab" ><label for="b65b2e7bf94f4cc0903ebfb4b848c075-c8e7e502c27e40a799430cb23543a4ce" >iOS</label>
-<input type="radio" id="b65b2e7bf94f4cc0903ebfb4b848c075-3f6966cc491e4986bd2dc578d6f38a68" name="b65b2e7bf94f4cc0903ebfb4b848c075" class="tab" ><label for="b65b2e7bf94f4cc0903ebfb4b848c075-3f6966cc491e4986bd2dc578d6f38a68" >Windows</label>
+<input type="radio" id="d16538ed6df841dc89ad6538d6bfc577-4af87b09e741457f939cc284b5869c90" name="d16538ed6df841dc89ad6538d6bfc577" class="tab" checked><label for="d16538ed6df841dc89ad6538d6bfc577-4af87b09e741457f939cc284b5869c90" >General</label>
+<input type="radio" id="d16538ed6df841dc89ad6538d6bfc577-5207056b9cb44a4c936456b567113b00" name="d16538ed6df841dc89ad6538d6bfc577" class="tab" ><label for="d16538ed6df841dc89ad6538d6bfc577-5207056b9cb44a4c936456b567113b00" >Startup</label>
+<input type="radio" id="d16538ed6df841dc89ad6538d6bfc577-9b59f728f0c64f6bb4263df16a127ff9" name="d16538ed6df841dc89ad6538d6bfc577" class="tab" ><label for="d16538ed6df841dc89ad6538d6bfc577-9b59f728f0c64f6bb4263df16a127ff9" >Android</label>
+<input type="radio" id="d16538ed6df841dc89ad6538d6bfc577-ebc1e8c1ea084b5d97e5cf971db83a18" name="d16538ed6df841dc89ad6538d6bfc577" class="tab" ><label for="d16538ed6df841dc89ad6538d6bfc577-ebc1e8c1ea084b5d97e5cf971db83a18" >iOS</label>
+<input type="radio" id="d16538ed6df841dc89ad6538d6bfc577-760aa48961cb48528500e8f83c234857" name="d16538ed6df841dc89ad6538d6bfc577" class="tab" ><label for="d16538ed6df841dc89ad6538d6bfc577-760aa48961cb48528500e8f83c234857" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
