--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -358,7 +358,10 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -367,11 +370,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="15cb1752f31f4bf8a45fba86ac3fb713-155cd1d74c384eb0aea687c6207db2c2" name="15cb1752f31f4bf8a45fba86ac3fb713" class="tab" checked=""><label for="15cb1752f31f4bf8a45fba86ac3fb713-155cd1d74c384eb0aea687c6207db2c2">General</label>
-<input type="radio" id="15cb1752f31f4bf8a45fba86ac3fb713-69608450efd8482fb966dce71d05dd12" name="15cb1752f31f4bf8a45fba86ac3fb713" class="tab"><label for="15cb1752f31f4bf8a45fba86ac3fb713-69608450efd8482fb966dce71d05dd12">Startup</label>
-<input type="radio" id="15cb1752f31f4bf8a45fba86ac3fb713-19ea4d781f5948088cc91aeabec33d1c" name="15cb1752f31f4bf8a45fba86ac3fb713" class="tab"><label for="15cb1752f31f4bf8a45fba86ac3fb713-19ea4d781f5948088cc91aeabec33d1c">Android</label>
-<input type="radio" id="15cb1752f31f4bf8a45fba86ac3fb713-c1ebdb49f1f0435aadbdc427338daeca" name="15cb1752f31f4bf8a45fba86ac3fb713" class="tab"><label for="15cb1752f31f4bf8a45fba86ac3fb713-c1ebdb49f1f0435aadbdc427338daeca">iOS</label>
-<input type="radio" id="15cb1752f31f4bf8a45fba86ac3fb713-ad001c05c8b74504a47fc1dfaddc1987" name="15cb1752f31f4bf8a45fba86ac3fb713" class="tab"><label for="15cb1752f31f4bf8a45fba86ac3fb713-ad001c05c8b74504a47fc1dfaddc1987">Windows</label>
+<input type="radio" id="522674b5bc6d4265b8f3795208b9166d-542566a38cee4a56ba352896f1aabe52" name="522674b5bc6d4265b8f3795208b9166d" class="tab" checked=""><label for="522674b5bc6d4265b8f3795208b9166d-542566a38cee4a56ba352896f1aabe52">General</label>
+<input type="radio" id="522674b5bc6d4265b8f3795208b9166d-45174a899e954d478999c847d7170e8e" name="522674b5bc6d4265b8f3795208b9166d" class="tab"><label for="522674b5bc6d4265b8f3795208b9166d-45174a899e954d478999c847d7170e8e">Startup</label>
+<input type="radio" id="522674b5bc6d4265b8f3795208b9166d-0527b017b88b4b8394965f9b1e521d38" name="522674b5bc6d4265b8f3795208b9166d" class="tab"><label for="522674b5bc6d4265b8f3795208b9166d-0527b017b88b4b8394965f9b1e521d38">Android</label>
+<input type="radio" id="522674b5bc6d4265b8f3795208b9166d-43912cbaeb38416cb41a15fa3c0cba28" name="522674b5bc6d4265b8f3795208b9166d" class="tab"><label for="522674b5bc6d4265b8f3795208b9166d-43912cbaeb38416cb41a15fa3c0cba28">iOS</label>
+<input type="radio" id="522674b5bc6d4265b8f3795208b9166d-b90c372fdca44a60a8f45c3ae542bafc" name="522674b5bc6d4265b8f3795208b9166d" class="tab"><label for="522674b5bc6d4265b8f3795208b9166d-b90c372fdca44a60a8f45c3ae542bafc">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
