--- a/push/firebase.html
+++ b/push/firebase.html
@@ -358,16 +358,19 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="4ca6fa9bfaf54329962a85302a5a5f1f-3b5be3e24eae4089aff97775347aeb20" name="4ca6fa9bfaf54329962a85302a5a5f1f" class="tab" checked=""><label for="4ca6fa9bfaf54329962a85302a5a5f1f-3b5be3e24eae4089aff97775347aeb20">General</label>
-<input type="radio" id="4ca6fa9bfaf54329962a85302a5a5f1f-93348f78251c431e97f967aac35eec94" name="4ca6fa9bfaf54329962a85302a5a5f1f" class="tab"><label for="4ca6fa9bfaf54329962a85302a5a5f1f-93348f78251c431e97f967aac35eec94">Startup</label>
-<input type="radio" id="4ca6fa9bfaf54329962a85302a5a5f1f-9d638125e3fe4ab9ba0a434576f1c9c7" name="4ca6fa9bfaf54329962a85302a5a5f1f" class="tab"><label for="4ca6fa9bfaf54329962a85302a5a5f1f-9d638125e3fe4ab9ba0a434576f1c9c7">Android</label>
-<input type="radio" id="4ca6fa9bfaf54329962a85302a5a5f1f-f23a259c744a4aa4bff5ea593148adc0" name="4ca6fa9bfaf54329962a85302a5a5f1f" class="tab"><label for="4ca6fa9bfaf54329962a85302a5a5f1f-f23a259c744a4aa4bff5ea593148adc0">iOS</label>
+<input type="radio" id="11d51b08fabe4fb4a14e3eec16a28835-0088da76f6e548e1bc1eac7062a95534" name="11d51b08fabe4fb4a14e3eec16a28835" class="tab" checked=""><label for="11d51b08fabe4fb4a14e3eec16a28835-0088da76f6e548e1bc1eac7062a95534">General</label>
+<input type="radio" id="11d51b08fabe4fb4a14e3eec16a28835-169adeca14bd4d2da91a031772ea2842" name="11d51b08fabe4fb4a14e3eec16a28835" class="tab"><label for="11d51b08fabe4fb4a14e3eec16a28835-169adeca14bd4d2da91a031772ea2842">Startup</label>
+<input type="radio" id="11d51b08fabe4fb4a14e3eec16a28835-aa5ee766ddd74169ab3c0de98c1fa08b" name="11d51b08fabe4fb4a14e3eec16a28835" class="tab"><label for="11d51b08fabe4fb4a14e3eec16a28835-aa5ee766ddd74169ab3c0de98c1fa08b">Android</label>
+<input type="radio" id="11d51b08fabe4fb4a14e3eec16a28835-b3555daa8113427ab24251e017e43bb4" name="11d51b08fabe4fb4a14e3eec16a28835" class="tab"><label for="11d51b08fabe4fb4a14e3eec16a28835-b3555daa8113427ab24251e017e43bb4">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
