--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -360,16 +360,19 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1fe0d11014994a58a0e4a43518e8b4e5-55574f538eb64f9d8154199d93e7fbe0" name="1fe0d11014994a58a0e4a43518e8b4e5" class="tab" checked><label for="1fe0d11014994a58a0e4a43518e8b4e5-55574f538eb64f9d8154199d93e7fbe0" >General</label>
-<input type="radio" id="1fe0d11014994a58a0e4a43518e8b4e5-e8ffba94236545f789f20cb29229f509" name="1fe0d11014994a58a0e4a43518e8b4e5" class="tab" ><label for="1fe0d11014994a58a0e4a43518e8b4e5-e8ffba94236545f789f20cb29229f509" >Startup</label>
-<input type="radio" id="1fe0d11014994a58a0e4a43518e8b4e5-93af4cd0c5534055b899407caf2aa247" name="1fe0d11014994a58a0e4a43518e8b4e5" class="tab" ><label for="1fe0d11014994a58a0e4a43518e8b4e5-93af4cd0c5534055b899407caf2aa247" >Android</label>
-<input type="radio" id="1fe0d11014994a58a0e4a43518e8b4e5-070baf89377c4b1fbd1759d740b568e7" name="1fe0d11014994a58a0e4a43518e8b4e5" class="tab" ><label for="1fe0d11014994a58a0e4a43518e8b4e5-070baf89377c4b1fbd1759d740b568e7" >Windows</label>
+<input type="radio" id="1bc6b2266a3e443cbb96e9cff04b687a-600d03ad325b45558819f2c91c888f42" name="1bc6b2266a3e443cbb96e9cff04b687a" class="tab" checked><label for="1bc6b2266a3e443cbb96e9cff04b687a-600d03ad325b45558819f2c91c888f42" >General</label>
+<input type="radio" id="1bc6b2266a3e443cbb96e9cff04b687a-6308875b0e6b4f219846e3eb491ac0f1" name="1bc6b2266a3e443cbb96e9cff04b687a" class="tab" ><label for="1bc6b2266a3e443cbb96e9cff04b687a-6308875b0e6b4f219846e3eb491ac0f1" >Startup</label>
+<input type="radio" id="1bc6b2266a3e443cbb96e9cff04b687a-c4954282646a4cb3a0521a97452e9624" name="1bc6b2266a3e443cbb96e9cff04b687a" class="tab" ><label for="1bc6b2266a3e443cbb96e9cff04b687a-c4954282646a4cb3a0521a97452e9624" >Android</label>
+<input type="radio" id="1bc6b2266a3e443cbb96e9cff04b687a-4676e6aa0d6044bba47a0450538542c8" name="1bc6b2266a3e443cbb96e9cff04b687a" class="tab" ><label for="1bc6b2266a3e443cbb96e9cff04b687a-4676e6aa0d6044bba47a0450538542c8" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
