--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="dbdec9f5419440a9879c6fc99f911b0e-f30634d51b36458798e9c9cde0b74740" name="dbdec9f5419440a9879c6fc99f911b0e" class="tab" checked><label for="dbdec9f5419440a9879c6fc99f911b0e-f30634d51b36458798e9c9cde0b74740" >General</label>
-<input type="radio" id="dbdec9f5419440a9879c6fc99f911b0e-c02f3f6958f44189b7cbd3b1fe1f329b" name="dbdec9f5419440a9879c6fc99f911b0e" class="tab" ><label for="dbdec9f5419440a9879c6fc99f911b0e-c02f3f6958f44189b7cbd3b1fe1f329b" >Startup</label>
-<input type="radio" id="dbdec9f5419440a9879c6fc99f911b0e-0a6b89d3e3db4ca690ab6a0a86997fee" name="dbdec9f5419440a9879c6fc99f911b0e" class="tab" ><label for="dbdec9f5419440a9879c6fc99f911b0e-0a6b89d3e3db4ca690ab6a0a86997fee" >Android</label>
-<input type="radio" id="dbdec9f5419440a9879c6fc99f911b0e-30fdb48a71b8408a87ed853e794870de" name="dbdec9f5419440a9879c6fc99f911b0e" class="tab" ><label for="dbdec9f5419440a9879c6fc99f911b0e-30fdb48a71b8408a87ed853e794870de" >iOS</label>
-<input type="radio" id="dbdec9f5419440a9879c6fc99f911b0e-a9359eba1b3741909deace9d95704147" name="dbdec9f5419440a9879c6fc99f911b0e" class="tab" ><label for="dbdec9f5419440a9879c6fc99f911b0e-a9359eba1b3741909deace9d95704147" >Windows</label>
+<input type="radio" id="569428ab9d10457a9d5989f661b9adc8-7103012d8ce64dc0bfb1773f32c75003" name="569428ab9d10457a9d5989f661b9adc8" class="tab" checked><label for="569428ab9d10457a9d5989f661b9adc8-7103012d8ce64dc0bfb1773f32c75003" >General</label>
+<input type="radio" id="569428ab9d10457a9d5989f661b9adc8-5dcdc9969a704ca08e81b8d4eba712e1" name="569428ab9d10457a9d5989f661b9adc8" class="tab" ><label for="569428ab9d10457a9d5989f661b9adc8-5dcdc9969a704ca08e81b8d4eba712e1" >Startup</label>
+<input type="radio" id="569428ab9d10457a9d5989f661b9adc8-e1729458a80341e186a3e77cc2bba340" name="569428ab9d10457a9d5989f661b9adc8" class="tab" ><label for="569428ab9d10457a9d5989f661b9adc8-e1729458a80341e186a3e77cc2bba340" >Android</label>
+<input type="radio" id="569428ab9d10457a9d5989f661b9adc8-5d1ee22e92bd47d79b8d18afb4f613a1" name="569428ab9d10457a9d5989f661b9adc8" class="tab" ><label for="569428ab9d10457a9d5989f661b9adc8-5d1ee22e92bd47d79b8d18afb4f613a1" >iOS</label>
+<input type="radio" id="569428ab9d10457a9d5989f661b9adc8-ea3ad90319d44a7bb78a182fc4749656" name="569428ab9d10457a9d5989f661b9adc8" class="tab" ><label for="569428ab9d10457a9d5989f661b9adc8-ea3ad90319d44a7bb78a182fc4749656" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
