--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d321191049aa405a85e67c450737fbdd-7f390eb309b9464198608e480ec13852" name="d321191049aa405a85e67c450737fbdd" class="tab" checked><label for="d321191049aa405a85e67c450737fbdd-7f390eb309b9464198608e480ec13852" >General</label>
-<input type="radio" id="d321191049aa405a85e67c450737fbdd-9d6f0e1ccef24ed9b92c695e006ecbb1" name="d321191049aa405a85e67c450737fbdd" class="tab" ><label for="d321191049aa405a85e67c450737fbdd-9d6f0e1ccef24ed9b92c695e006ecbb1" >Startup</label>
-<input type="radio" id="d321191049aa405a85e67c450737fbdd-94b924bc27a84fb5ac1a03d3b8447b2f" name="d321191049aa405a85e67c450737fbdd" class="tab" ><label for="d321191049aa405a85e67c450737fbdd-94b924bc27a84fb5ac1a03d3b8447b2f" >Android</label>
-<input type="radio" id="d321191049aa405a85e67c450737fbdd-00fbc98428d04fec8e1c8cd01f49e705" name="d321191049aa405a85e67c450737fbdd" class="tab" ><label for="d321191049aa405a85e67c450737fbdd-00fbc98428d04fec8e1c8cd01f49e705" >iOS</label>
-<input type="radio" id="d321191049aa405a85e67c450737fbdd-c8ede23d0cd44192bc73eb5c7e6fc55c" name="d321191049aa405a85e67c450737fbdd" class="tab" ><label for="d321191049aa405a85e67c450737fbdd-c8ede23d0cd44192bc73eb5c7e6fc55c" >Windows</label>
+<input type="radio" id="fe7592eb582545729e8c82fe675af899-90865adfddcd4cffb26c8dec702f942f" name="fe7592eb582545729e8c82fe675af899" class="tab" checked><label for="fe7592eb582545729e8c82fe675af899-90865adfddcd4cffb26c8dec702f942f" >General</label>
+<input type="radio" id="fe7592eb582545729e8c82fe675af899-fcbe484871b245978e6a45263f132bcc" name="fe7592eb582545729e8c82fe675af899" class="tab" ><label for="fe7592eb582545729e8c82fe675af899-fcbe484871b245978e6a45263f132bcc" >Startup</label>
+<input type="radio" id="fe7592eb582545729e8c82fe675af899-24140125b3db40328009d1821b78f075" name="fe7592eb582545729e8c82fe675af899" class="tab" ><label for="fe7592eb582545729e8c82fe675af899-24140125b3db40328009d1821b78f075" >Android</label>
+<input type="radio" id="fe7592eb582545729e8c82fe675af899-2c234c0b3ea04d43bf6fb61c31ba5bf9" name="fe7592eb582545729e8c82fe675af899" class="tab" ><label for="fe7592eb582545729e8c82fe675af899-2c234c0b3ea04d43bf6fb61c31ba5bf9" >iOS</label>
+<input type="radio" id="fe7592eb582545729e8c82fe675af899-eea35ca674f0406d92936b750a27da1b" name="fe7592eb582545729e8c82fe675af899" class="tab" ><label for="fe7592eb582545729e8c82fe675af899-eea35ca674f0406d92936b750a27da1b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
