--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -360,15 +360,18 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e9f56a565e94438892983feb9f2bf541-d65ade637432422d95f49220651f62ee" name="e9f56a565e94438892983feb9f2bf541" class="tab" checked><label for="e9f56a565e94438892983feb9f2bf541-d65ade637432422d95f49220651f62ee" >General</label>
-<input type="radio" id="e9f56a565e94438892983feb9f2bf541-8e5757971c294d259eb8f6f09c0b095a" name="e9f56a565e94438892983feb9f2bf541" class="tab" ><label for="e9f56a565e94438892983feb9f2bf541-8e5757971c294d259eb8f6f09c0b095a" >Startup</label>
-<input type="radio" id="e9f56a565e94438892983feb9f2bf541-3f5a3dce1c9d4dc9bf4c197333b0a0b1" name="e9f56a565e94438892983feb9f2bf541" class="tab" ><label for="e9f56a565e94438892983feb9f2bf541-3f5a3dce1c9d4dc9bf4c197333b0a0b1" >Android</label>
+<input type="radio" id="ee9293879e1f4469a88dcb706dceb8e0-2ba7f34778f844399baaa1d846fe8826" name="ee9293879e1f4469a88dcb706dceb8e0" class="tab" checked><label for="ee9293879e1f4469a88dcb706dceb8e0-2ba7f34778f844399baaa1d846fe8826" >General</label>
+<input type="radio" id="ee9293879e1f4469a88dcb706dceb8e0-b697b251642945e29d0d1c480f4caf20" name="ee9293879e1f4469a88dcb706dceb8e0" class="tab" ><label for="ee9293879e1f4469a88dcb706dceb8e0-b697b251642945e29d0d1c480f4caf20" >Startup</label>
+<input type="radio" id="ee9293879e1f4469a88dcb706dceb8e0-9991214259e14126b86c804412e12c8a" name="ee9293879e1f4469a88dcb706dceb8e0" class="tab" ><label for="ee9293879e1f4469a88dcb706dceb8e0-9991214259e14126b86c804412e12c8a" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
