--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b38c462fc1cf4bccb06fafc9858499d8-2ec6b474648d4862b1b17db1ddf01699" name="b38c462fc1cf4bccb06fafc9858499d8" class="tab" checked><label for="b38c462fc1cf4bccb06fafc9858499d8-2ec6b474648d4862b1b17db1ddf01699" >General</label>
-<input type="radio" id="b38c462fc1cf4bccb06fafc9858499d8-4ffe0c20b6834c5e955ff1a0c187cd3c" name="b38c462fc1cf4bccb06fafc9858499d8" class="tab" ><label for="b38c462fc1cf4bccb06fafc9858499d8-4ffe0c20b6834c5e955ff1a0c187cd3c" >Startup</label>
-<input type="radio" id="b38c462fc1cf4bccb06fafc9858499d8-b13f99f6dabc451e9a37e9e2abe06937" name="b38c462fc1cf4bccb06fafc9858499d8" class="tab" ><label for="b38c462fc1cf4bccb06fafc9858499d8-b13f99f6dabc451e9a37e9e2abe06937" >Android</label>
-<input type="radio" id="b38c462fc1cf4bccb06fafc9858499d8-aa94c902f1d14fb6a6c886fbc96b5b1b" name="b38c462fc1cf4bccb06fafc9858499d8" class="tab" ><label for="b38c462fc1cf4bccb06fafc9858499d8-aa94c902f1d14fb6a6c886fbc96b5b1b" >iOS</label>
-<input type="radio" id="b38c462fc1cf4bccb06fafc9858499d8-163b30065c904f44a8e3c3ebadb98d22" name="b38c462fc1cf4bccb06fafc9858499d8" class="tab" ><label for="b38c462fc1cf4bccb06fafc9858499d8-163b30065c904f44a8e3c3ebadb98d22" >Windows</label>
+<input type="radio" id="3469f4f2223d4b20bef35cf404d89f5e-99ae7db1d6bb49c2b5610c02ddfe6a59" name="3469f4f2223d4b20bef35cf404d89f5e" class="tab" checked><label for="3469f4f2223d4b20bef35cf404d89f5e-99ae7db1d6bb49c2b5610c02ddfe6a59" >General</label>
+<input type="radio" id="3469f4f2223d4b20bef35cf404d89f5e-5cff8f21d282457386f9b8d87d4c2082" name="3469f4f2223d4b20bef35cf404d89f5e" class="tab" ><label for="3469f4f2223d4b20bef35cf404d89f5e-5cff8f21d282457386f9b8d87d4c2082" >Startup</label>
+<input type="radio" id="3469f4f2223d4b20bef35cf404d89f5e-8a66e6bf192149009a2813eaeb721915" name="3469f4f2223d4b20bef35cf404d89f5e" class="tab" ><label for="3469f4f2223d4b20bef35cf404d89f5e-8a66e6bf192149009a2813eaeb721915" >Android</label>
+<input type="radio" id="3469f4f2223d4b20bef35cf404d89f5e-68788861d2d8430e8aa6495c7de60531" name="3469f4f2223d4b20bef35cf404d89f5e" class="tab" ><label for="3469f4f2223d4b20bef35cf404d89f5e-68788861d2d8430e8aa6495c7de60531" >iOS</label>
+<input type="radio" id="3469f4f2223d4b20bef35cf404d89f5e-f2f916dfe8934df8b4dab6090cb01204" name="3469f4f2223d4b20bef35cf404d89f5e" class="tab" ><label for="3469f4f2223d4b20bef35cf404d89f5e-f2f916dfe8934df8b4dab6090cb01204" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
