--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -360,16 +360,19 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f5d6f3c08a80495fbb447b0dba8585a1-edaefe68ddd94940b151a49f013445cc" name="f5d6f3c08a80495fbb447b0dba8585a1" class="tab" checked><label for="f5d6f3c08a80495fbb447b0dba8585a1-edaefe68ddd94940b151a49f013445cc" >General</label>
-<input type="radio" id="f5d6f3c08a80495fbb447b0dba8585a1-28d8dac88d6c48a4b57cf4f5be7b5d70" name="f5d6f3c08a80495fbb447b0dba8585a1" class="tab" ><label for="f5d6f3c08a80495fbb447b0dba8585a1-28d8dac88d6c48a4b57cf4f5be7b5d70" >Startup</label>
-<input type="radio" id="f5d6f3c08a80495fbb447b0dba8585a1-81b479426bf54efab1b0a80203239b42" name="f5d6f3c08a80495fbb447b0dba8585a1" class="tab" ><label for="f5d6f3c08a80495fbb447b0dba8585a1-81b479426bf54efab1b0a80203239b42" >Android</label>
-<input type="radio" id="f5d6f3c08a80495fbb447b0dba8585a1-4b7727c23fc24345a329a79aa7377693" name="f5d6f3c08a80495fbb447b0dba8585a1" class="tab" ><label for="f5d6f3c08a80495fbb447b0dba8585a1-4b7727c23fc24345a329a79aa7377693" >iOS</label>
+<input type="radio" id="90fd47dd578c4b74a781bca6c96964ab-17f10b265f144c4bb0ca516f30f5d9dd" name="90fd47dd578c4b74a781bca6c96964ab" class="tab" checked><label for="90fd47dd578c4b74a781bca6c96964ab-17f10b265f144c4bb0ca516f30f5d9dd" >General</label>
+<input type="radio" id="90fd47dd578c4b74a781bca6c96964ab-0fe19c454f0f42a7a2a8f25a83d34dfe" name="90fd47dd578c4b74a781bca6c96964ab" class="tab" ><label for="90fd47dd578c4b74a781bca6c96964ab-0fe19c454f0f42a7a2a8f25a83d34dfe" >Startup</label>
+<input type="radio" id="90fd47dd578c4b74a781bca6c96964ab-9b5e38605fab4cf29a141f66cc4c9040" name="90fd47dd578c4b74a781bca6c96964ab" class="tab" ><label for="90fd47dd578c4b74a781bca6c96964ab-9b5e38605fab4cf29a141f66cc4c9040" >Android</label>
+<input type="radio" id="90fd47dd578c4b74a781bca6c96964ab-cae95628f49a4ec3826bc0804828cf38" name="90fd47dd578c4b74a781bca6c96964ab" class="tab" ><label for="90fd47dd578c4b74a781bca6c96964ab-cae95628f49a4ec3826bc0804828cf38" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
