--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -360,15 +360,18 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b9a742ac647a44b5a92dad5c9e58cf4c-e0935865ffed44bc96d6af2f082fed06" name="b9a742ac647a44b5a92dad5c9e58cf4c" class="tab" checked><label for="b9a742ac647a44b5a92dad5c9e58cf4c-e0935865ffed44bc96d6af2f082fed06" >General</label>
-<input type="radio" id="b9a742ac647a44b5a92dad5c9e58cf4c-c73f95fb4fe543379613cd02af5ab72a" name="b9a742ac647a44b5a92dad5c9e58cf4c" class="tab" ><label for="b9a742ac647a44b5a92dad5c9e58cf4c-c73f95fb4fe543379613cd02af5ab72a" >Startup</label>
-<input type="radio" id="b9a742ac647a44b5a92dad5c9e58cf4c-0532e1b27b7b40c097b9d4d9f1ac764b" name="b9a742ac647a44b5a92dad5c9e58cf4c" class="tab" ><label for="b9a742ac647a44b5a92dad5c9e58cf4c-0532e1b27b7b40c097b9d4d9f1ac764b" >Android</label>
+<input type="radio" id="01a4a305be214d9c98b1a9edebf94477-87eb448383ea44ca8315d199a8f0635d" name="01a4a305be214d9c98b1a9edebf94477" class="tab" checked><label for="01a4a305be214d9c98b1a9edebf94477-87eb448383ea44ca8315d199a8f0635d" >General</label>
+<input type="radio" id="01a4a305be214d9c98b1a9edebf94477-3b8f562f70ba4a3cadc89c99286736d7" name="01a4a305be214d9c98b1a9edebf94477" class="tab" ><label for="01a4a305be214d9c98b1a9edebf94477-3b8f562f70ba4a3cadc89c99286736d7" >Startup</label>
+<input type="radio" id="01a4a305be214d9c98b1a9edebf94477-6fdae1e72b644e3cb9c3e3f3f2a691c0" name="01a4a305be214d9c98b1a9edebf94477" class="tab" ><label for="01a4a305be214d9c98b1a9edebf94477-6fdae1e72b644e3cb9c3e3f3f2a691c0" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
