--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="822b28a2ce2f4940945c9c28598232ba-3738e17f3a194aaebc674911c6ecd854" name="822b28a2ce2f4940945c9c28598232ba" class="tab" checked><label for="822b28a2ce2f4940945c9c28598232ba-3738e17f3a194aaebc674911c6ecd854" >General</label>
-<input type="radio" id="822b28a2ce2f4940945c9c28598232ba-da94e2db08a54ae68c53619288e5b59f" name="822b28a2ce2f4940945c9c28598232ba" class="tab" ><label for="822b28a2ce2f4940945c9c28598232ba-da94e2db08a54ae68c53619288e5b59f" >Startup</label>
-<input type="radio" id="822b28a2ce2f4940945c9c28598232ba-98ec454e61d34908885a745e974ae132" name="822b28a2ce2f4940945c9c28598232ba" class="tab" ><label for="822b28a2ce2f4940945c9c28598232ba-98ec454e61d34908885a745e974ae132" >Android</label>
-<input type="radio" id="822b28a2ce2f4940945c9c28598232ba-1bf0e4fc961d43b8a248472e7d529e88" name="822b28a2ce2f4940945c9c28598232ba" class="tab" ><label for="822b28a2ce2f4940945c9c28598232ba-1bf0e4fc961d43b8a248472e7d529e88" >iOS</label>
+<input type="radio" id="b4aafe23dde046f6a4faffef395f91d5-d245bb15556942ca928d076eaa4c2335" name="b4aafe23dde046f6a4faffef395f91d5" class="tab" checked><label for="b4aafe23dde046f6a4faffef395f91d5-d245bb15556942ca928d076eaa4c2335" >General</label>
+<input type="radio" id="b4aafe23dde046f6a4faffef395f91d5-b77f076e254f4f389838709cedcecf2d" name="b4aafe23dde046f6a4faffef395f91d5" class="tab" ><label for="b4aafe23dde046f6a4faffef395f91d5-b77f076e254f4f389838709cedcecf2d" >Startup</label>
+<input type="radio" id="b4aafe23dde046f6a4faffef395f91d5-5070e67a2717482599b1bc06097109b5" name="b4aafe23dde046f6a4faffef395f91d5" class="tab" ><label for="b4aafe23dde046f6a4faffef395f91d5-5070e67a2717482599b1bc06097109b5" >Android</label>
+<input type="radio" id="b4aafe23dde046f6a4faffef395f91d5-953c26b745b049a2a9452b6c9b64bb9f" name="b4aafe23dde046f6a4faffef395f91d5" class="tab" ><label for="b4aafe23dde046f6a4faffef395f91d5-953c26b745b049a2a9452b6c9b64bb9f" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
