--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -358,18 +358,21 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="4922badbb3894823ab9dd10a46bd0d0d-7fbbf158a68a46358a897180eaef9f37" name="4922badbb3894823ab9dd10a46bd0d0d" class="tab" checked=""><label for="4922badbb3894823ab9dd10a46bd0d0d-7fbbf158a68a46358a897180eaef9f37">General</label>
-<input type="radio" id="4922badbb3894823ab9dd10a46bd0d0d-b7bbd5cd5ae24eb7a4fc08a779ad6086" name="4922badbb3894823ab9dd10a46bd0d0d" class="tab"><label for="4922badbb3894823ab9dd10a46bd0d0d-b7bbd5cd5ae24eb7a4fc08a779ad6086">Startup</label>
-<input type="radio" id="4922badbb3894823ab9dd10a46bd0d0d-2a34532eb06f4450a161feb2ac7fd91b" name="4922badbb3894823ab9dd10a46bd0d0d" class="tab"><label for="4922badbb3894823ab9dd10a46bd0d0d-2a34532eb06f4450a161feb2ac7fd91b">Android</label>
-<input type="radio" id="4922badbb3894823ab9dd10a46bd0d0d-08943439a61e44749b8e3a2fbe4028bd" name="4922badbb3894823ab9dd10a46bd0d0d" class="tab"><label for="4922badbb3894823ab9dd10a46bd0d0d-08943439a61e44749b8e3a2fbe4028bd">iOS</label>
-<input type="radio" id="4922badbb3894823ab9dd10a46bd0d0d-f3b08bc87d19440fa9eb0a564d34e36e" name="4922badbb3894823ab9dd10a46bd0d0d" class="tab"><label for="4922badbb3894823ab9dd10a46bd0d0d-f3b08bc87d19440fa9eb0a564d34e36e">Windows</label>
+<input type="radio" id="ffbadaba38354ec18903cf7c3317e969-be04605dbf1e41fca23044ff609b90ee" name="ffbadaba38354ec18903cf7c3317e969" class="tab" checked=""><label for="ffbadaba38354ec18903cf7c3317e969-be04605dbf1e41fca23044ff609b90ee">General</label>
+<input type="radio" id="ffbadaba38354ec18903cf7c3317e969-40bb4363c42c440e9cd65210a3dc6c14" name="ffbadaba38354ec18903cf7c3317e969" class="tab"><label for="ffbadaba38354ec18903cf7c3317e969-40bb4363c42c440e9cd65210a3dc6c14">Startup</label>
+<input type="radio" id="ffbadaba38354ec18903cf7c3317e969-d5371a8202f04edab2fe306a1a78e962" name="ffbadaba38354ec18903cf7c3317e969" class="tab"><label for="ffbadaba38354ec18903cf7c3317e969-d5371a8202f04edab2fe306a1a78e962">Android</label>
+<input type="radio" id="ffbadaba38354ec18903cf7c3317e969-c26b4b7d955042a0a106718925e4364c" name="ffbadaba38354ec18903cf7c3317e969" class="tab"><label for="ffbadaba38354ec18903cf7c3317e969-c26b4b7d955042a0a106718925e4364c">iOS</label>
+<input type="radio" id="ffbadaba38354ec18903cf7c3317e969-b1521726932e4a4b8f86091f142c775d" name="ffbadaba38354ec18903cf7c3317e969" class="tab"><label for="ffbadaba38354ec18903cf7c3317e969-b1521726932e4a4b8f86091f142c775d">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
