--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -360,7 +360,10 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -375,10 +378,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="8798fdd0c9354b149a2fe0315d5da022-4947749fb2084d96897714b9e81510a9" name="8798fdd0c9354b149a2fe0315d5da022" class="tab" checked><label for="8798fdd0c9354b149a2fe0315d5da022-4947749fb2084d96897714b9e81510a9" >General</label>
-<input type="radio" id="8798fdd0c9354b149a2fe0315d5da022-7f0c254d77be40c9afa0648eb35a130f" name="8798fdd0c9354b149a2fe0315d5da022" class="tab" ><label for="8798fdd0c9354b149a2fe0315d5da022-7f0c254d77be40c9afa0648eb35a130f" >Startup</label>
-<input type="radio" id="8798fdd0c9354b149a2fe0315d5da022-612f6f6c438940018930c0c9402d0d43" name="8798fdd0c9354b149a2fe0315d5da022" class="tab" ><label for="8798fdd0c9354b149a2fe0315d5da022-612f6f6c438940018930c0c9402d0d43" >Android</label>
-<input type="radio" id="8798fdd0c9354b149a2fe0315d5da022-b67f88906b6e4dfbb7c09d44b0f25735" name="8798fdd0c9354b149a2fe0315d5da022" class="tab" ><label for="8798fdd0c9354b149a2fe0315d5da022-b67f88906b6e4dfbb7c09d44b0f25735" >iOS</label>
+<input type="radio" id="e847f0f58f18494e82aa81f79357b571-f0e9c33eb0c44c4f803bea2bd7365685" name="e847f0f58f18494e82aa81f79357b571" class="tab" checked><label for="e847f0f58f18494e82aa81f79357b571-f0e9c33eb0c44c4f803bea2bd7365685" >General</label>
+<input type="radio" id="e847f0f58f18494e82aa81f79357b571-f86c437faa3a4c3789dd93841830522c" name="e847f0f58f18494e82aa81f79357b571" class="tab" ><label for="e847f0f58f18494e82aa81f79357b571-f86c437faa3a4c3789dd93841830522c" >Startup</label>
+<input type="radio" id="e847f0f58f18494e82aa81f79357b571-d8c70a571bdf44188b04e9a52badecf8" name="e847f0f58f18494e82aa81f79357b571" class="tab" ><label for="e847f0f58f18494e82aa81f79357b571-d8c70a571bdf44188b04e9a52badecf8" >Android</label>
+<input type="radio" id="e847f0f58f18494e82aa81f79357b571-5f7cf1efe51c452793f79784e5274050" name="e847f0f58f18494e82aa81f79357b571" class="tab" ><label for="e847f0f58f18494e82aa81f79357b571-5f7cf1efe51c452793f79784e5274050" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
