--- a/push/azure.html
+++ b/push/azure.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d6b47ac420e34ebab480d8e8e24405a3-382acea4efe3449c8295a72377c865eb" name="d6b47ac420e34ebab480d8e8e24405a3" class="tab" checked><label for="d6b47ac420e34ebab480d8e8e24405a3-382acea4efe3449c8295a72377c865eb" >General</label>
-<input type="radio" id="d6b47ac420e34ebab480d8e8e24405a3-c97f621faabf4ee7948eff515a70c7c7" name="d6b47ac420e34ebab480d8e8e24405a3" class="tab" ><label for="d6b47ac420e34ebab480d8e8e24405a3-c97f621faabf4ee7948eff515a70c7c7" >Startup</label>
-<input type="radio" id="d6b47ac420e34ebab480d8e8e24405a3-8c6d19d38ff6438e8678c95f96bf5857" name="d6b47ac420e34ebab480d8e8e24405a3" class="tab" ><label for="d6b47ac420e34ebab480d8e8e24405a3-8c6d19d38ff6438e8678c95f96bf5857" >Android</label>
-<input type="radio" id="d6b47ac420e34ebab480d8e8e24405a3-3c6e7fe7273949c893a91583ebce276a" name="d6b47ac420e34ebab480d8e8e24405a3" class="tab" ><label for="d6b47ac420e34ebab480d8e8e24405a3-3c6e7fe7273949c893a91583ebce276a" >iOS</label>
-<input type="radio" id="d6b47ac420e34ebab480d8e8e24405a3-a6a214a04bdb45e9b0633c1916c81c86" name="d6b47ac420e34ebab480d8e8e24405a3" class="tab" ><label for="d6b47ac420e34ebab480d8e8e24405a3-a6a214a04bdb45e9b0633c1916c81c86" >Windows</label>
+<input type="radio" id="a8c4f905131945e2a1812eb01c6219ef-926425d572fb4e3c86dfc3e3e6d80fd8" name="a8c4f905131945e2a1812eb01c6219ef" class="tab" checked><label for="a8c4f905131945e2a1812eb01c6219ef-926425d572fb4e3c86dfc3e3e6d80fd8" >General</label>
+<input type="radio" id="a8c4f905131945e2a1812eb01c6219ef-14c26df2b37649ab9c4bd9429e236d2b" name="a8c4f905131945e2a1812eb01c6219ef" class="tab" ><label for="a8c4f905131945e2a1812eb01c6219ef-14c26df2b37649ab9c4bd9429e236d2b" >Startup</label>
+<input type="radio" id="a8c4f905131945e2a1812eb01c6219ef-9b821de4b72d40948b49ad5c94c5ed94" name="a8c4f905131945e2a1812eb01c6219ef" class="tab" ><label for="a8c4f905131945e2a1812eb01c6219ef-9b821de4b72d40948b49ad5c94c5ed94" >Android</label>
+<input type="radio" id="a8c4f905131945e2a1812eb01c6219ef-d9efad79ecd545fb815f1e949970609b" name="a8c4f905131945e2a1812eb01c6219ef" class="tab" ><label for="a8c4f905131945e2a1812eb01c6219ef-d9efad79ecd545fb815f1e949970609b" >iOS</label>
+<input type="radio" id="a8c4f905131945e2a1812eb01c6219ef-166901439d0043b68ae7c97c101cbea0" name="a8c4f905131945e2a1812eb01c6219ef" class="tab" ><label for="a8c4f905131945e2a1812eb01c6219ef-166901439d0043b68ae7c97c101cbea0" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
