--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -360,7 +360,10 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -376,7 +379,8 @@
         <li><a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a></li>
         <li><a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a></li>
         <li><a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a></li>
-        <li><a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a></li>
+        <li><a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a></li>
+        <li><a href="/release-notes/v230">v2.3.0 (Preview)</a></li>
 </ul>
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
