--- a/release-notes/v220.html
+++ b/release-notes/v220.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - v2.2.0 (July 18, 2021)</title>
+    <title>Shiny.NET - v2.2.0 (July 30, 2021)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">v2.2.0 (July 18, 2021)</div>
+                                <div class="text-white m-0 title">v2.2.0 (July 30, 2021)</div>
                             </div>
                         </div>
                     </div>
@@ -360,7 +360,10 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child active">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -391,6 +394,7 @@
 <ul>
 <li>[BREAKING] IGpsManager/IGeofenceManager.WhenAccessStatusChanged &amp; IGpsManager/IGeofenceManager.Status removed - RequestAccess is a one stop shop</li>
 <li>[Enhancement] New extensions IGpsManager.GetCurrentPosition or IGpsManager.GetLastReadingOrCurrentPosition</li>
+<li>[Enhancement] NEW GetCurrentPosition will now engage the GPS and wait for a reading as opposed to GetLastReading which will only give the last reading if available</li>
 <li>[Fix][Android] Automatically ensure notifications are registered for foreground service <a href="https://github.com/shinyorg/shiny/issues/653">GH-653</a></li>
 <li>[Fix] GetLastReading will now request a reading if no location is current set on all platforms</li>
 </ul>
