--- a/release-notes/v230.html
+++ b/release-notes/v230.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - GeoDispatch</title>
+    <title>Shiny.NET - v2.3.0 (Preview)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">GeoDispatch</div>
+                                <div class="text-white m-0 title">v2.3.0 (Preview)</div>
                             </div>
                         </div>
                     </div>
@@ -324,14 +324,14 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/appservices">App Services</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/calldirectory">Call Directory</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/datasync">Data Sync</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/geodispatch">GeoDispatch</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -349,7 +349,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
@@ -362,45 +362,47 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <p>Push + GPS - By sending a push notification with incident data in the payload, your users will now receive a notification if they are within the sent &quot;geofence&quot; to ask them if they are able to manage a situation.</p>
-<pre><code class="language-csharp">namespace Shiny.GeoDispatch
-{
-    public interface IGeoDispatchManager
-    {
-        bool IsEnabled { get; set; }
-        Task&lt;PushAccessState&gt; RequestAccess();
-
-        Task RespondToDispatch(string identifier, bool accept, string? textReply);
-        Task&lt;IEnumerable&lt;GeoDispatchMessage&gt;&gt; GetPendingDispatches();
-    }
-}
-</code></pre>
-<h3 id="configuration">Configuration</h3>
-<pre><code class="language-csharp">    public ChannelImportance NotificationChannelImportance { get; set; } = ChannelImportance.Normal;
-    public string NotificationAcceptText { get; set; } = &quot;Accept&quot;;
-    public string NotificationRejectText { get; set; } = &quot;Reject&quot;;
-    public bool AllowAcceptTextReplies { get; set; }
-    public bool AllowRejectTextReplies { get; set; }
-
-    /// &lt;summary&gt;
-    /// If true, unit is processed as meters else processed as miles
-    /// &lt;/summary&gt;
-    public bool PayloadRadiusInMetricUnit { get; set; } = true;
-    public string PayloadIdKey { get; set; } = &quot;id&quot;;
-    public string PayloadLatitudeKey { get; set; } = &quot;lat&quot;;
-    public string PayloadLongitudeKey { get; set; } = &quot;lng&quot;;
-    public string PayloadRadiusKey { get; set; } = &quot;rad&quot;;
-</code></pre>
+                                    <h3 id="core">Core</h3>
+<ul>
+<li>[BREAKING] Jobs has been moved from Shiny.Core to its own module Shiny.Jobs</li>
+<li>[BREAKING][iOS] Default store is now secure storage (KeyChain) to deal with potential auto-start issues before device has been unlocked</li>
+</ul>
+<h3 id="bluetoothle">BluetoothLE</h3>
+<ul>
+<li>[Fix] Managed Scan Result now returns as IAdvertisementData for consistency</li>
+<li>[Fix] ManagedScan.Start is now async to expose permission issues before starting the scan <a href="https://github.com/shinyorg/shiny/issues/698">GH-698</a></li>
+<li>[Fix] ManagedScan.Toggle has been moved to an extension method.,</li>
+</ul>
+<h3 id="locations">Locations</h3>
+<ul>
+<li>[Enhancement] GpsManager.GetCurrentPosition will start/stop the GPS tracking only if it wasn't started before</li>
+<li>[Enhancement] IGpsManager.StartAndReceive starts GPS when subscribe and turns it off when unsubscribed OR the app goes to the background</li>
+<li>[Fix] GPS setting state is only written to settings if background is used</li>
+<li>[Fix][iOS] Will only attempt to auto-start the GPS tracking in background if authorization status has been fully granted (Always Allow)</li>
+</ul>
+<h3 id="jobs">Jobs</h3>
+<ul>
+<li>[Enhancement] UsesJobs now allows you to manually register the job manager - RegisterJob will call this automatically</li>
+<li>[Enhancement] Foregrounding is now always available if you set your job as &quot;RunInForeground&quot;, there is no need to call UseForegroundJobs</li>
+<li>[Fix][iOS] BGTasks - Correct filters applied to all modes</li>
+</ul>
+<h3 id="push">Push</h3>
+<ul>
+<li>[BREAKING] IPushDelegate.OnTokenChanged is now called IPushDelegate.OnTokenRefreshed</li>
+<li>[BREAKING] Channels are no longer registered within Push.  Use INotificationManager to do this.  If you need more customization over notification, send data messages and use INotificationManager</li>
+<li>[Fix][Android] OnEntry now functions under all modules</li>
+<li>[Fix][iOS][Native] IPushDelegate.OnTokenChanged is no longer called by RequestAccess and the proper token is returned</li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/appservices/geodispatch.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/release-notes/v230.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
