--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="24bf4c7a8fe3492789b41678b94b8006-b2e8423b8e3a49a1b701f3f11a9f9b9e" name="24bf4c7a8fe3492789b41678b94b8006" class="tab" checked><label for="24bf4c7a8fe3492789b41678b94b8006-b2e8423b8e3a49a1b701f3f11a9f9b9e" >General</label>
-<input type="radio" id="24bf4c7a8fe3492789b41678b94b8006-fbdbb40449ba4e1b9ee1dc6b5c4ead65" name="24bf4c7a8fe3492789b41678b94b8006" class="tab" ><label for="24bf4c7a8fe3492789b41678b94b8006-fbdbb40449ba4e1b9ee1dc6b5c4ead65" >Startup</label>
-<input type="radio" id="24bf4c7a8fe3492789b41678b94b8006-a73c818026974e55b7a93420e4e4ed83" name="24bf4c7a8fe3492789b41678b94b8006" class="tab" ><label for="24bf4c7a8fe3492789b41678b94b8006-a73c818026974e55b7a93420e4e4ed83" >Android</label>
-<input type="radio" id="24bf4c7a8fe3492789b41678b94b8006-c3b8f4d8ca2d4beca1d43c70c510d3b0" name="24bf4c7a8fe3492789b41678b94b8006" class="tab" ><label for="24bf4c7a8fe3492789b41678b94b8006-c3b8f4d8ca2d4beca1d43c70c510d3b0" >iOS</label>
-<input type="radio" id="24bf4c7a8fe3492789b41678b94b8006-3425de1e906b415ba90e6e0d54279cc6" name="24bf4c7a8fe3492789b41678b94b8006" class="tab" ><label for="24bf4c7a8fe3492789b41678b94b8006-3425de1e906b415ba90e6e0d54279cc6" >Windows</label>
+<input type="radio" id="27dd27aa3d324a4086ef12fcbb629a11-925fce86b2da4947828bb3258c19d740" name="27dd27aa3d324a4086ef12fcbb629a11" class="tab" checked><label for="27dd27aa3d324a4086ef12fcbb629a11-925fce86b2da4947828bb3258c19d740" >General</label>
+<input type="radio" id="27dd27aa3d324a4086ef12fcbb629a11-d7da2bce4ffe41ad864ab999caf737ab" name="27dd27aa3d324a4086ef12fcbb629a11" class="tab" ><label for="27dd27aa3d324a4086ef12fcbb629a11-d7da2bce4ffe41ad864ab999caf737ab" >Startup</label>
+<input type="radio" id="27dd27aa3d324a4086ef12fcbb629a11-720d70b29bd24620afb4a81d78863364" name="27dd27aa3d324a4086ef12fcbb629a11" class="tab" ><label for="27dd27aa3d324a4086ef12fcbb629a11-720d70b29bd24620afb4a81d78863364" >Android</label>
+<input type="radio" id="27dd27aa3d324a4086ef12fcbb629a11-ef47dfc54c2241f6b27ceee57eeb6db5" name="27dd27aa3d324a4086ef12fcbb629a11" class="tab" ><label for="27dd27aa3d324a4086ef12fcbb629a11-ef47dfc54c2241f6b27ceee57eeb6db5" >iOS</label>
+<input type="radio" id="27dd27aa3d324a4086ef12fcbb629a11-db3f5743e6fe484989067540018a0c15" name="27dd27aa3d324a4086ef12fcbb629a11" class="tab" ><label for="27dd27aa3d324a4086ef12fcbb629a11-db3f5743e6fe484989067540018a0c15" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
