--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b7e3526d28804cbd9d49c7ea4d188a9d-69cfd5e07930420bbcfe16f40e57ca42" name="b7e3526d28804cbd9d49c7ea4d188a9d" class="tab" checked><label for="b7e3526d28804cbd9d49c7ea4d188a9d-69cfd5e07930420bbcfe16f40e57ca42" >General</label>
-<input type="radio" id="b7e3526d28804cbd9d49c7ea4d188a9d-d0c18e06311b4a9685f6863ce81e9c44" name="b7e3526d28804cbd9d49c7ea4d188a9d" class="tab" ><label for="b7e3526d28804cbd9d49c7ea4d188a9d-d0c18e06311b4a9685f6863ce81e9c44" >Startup</label>
-<input type="radio" id="b7e3526d28804cbd9d49c7ea4d188a9d-5e25d9123a3d4fc98471f04379994fb3" name="b7e3526d28804cbd9d49c7ea4d188a9d" class="tab" ><label for="b7e3526d28804cbd9d49c7ea4d188a9d-5e25d9123a3d4fc98471f04379994fb3" >Android</label>
-<input type="radio" id="b7e3526d28804cbd9d49c7ea4d188a9d-0df4b3c22494485ab91693dda8a5fab7" name="b7e3526d28804cbd9d49c7ea4d188a9d" class="tab" ><label for="b7e3526d28804cbd9d49c7ea4d188a9d-0df4b3c22494485ab91693dda8a5fab7" >iOS</label>
-<input type="radio" id="b7e3526d28804cbd9d49c7ea4d188a9d-b68eae42c23144f787dc0c440ce2b6a5" name="b7e3526d28804cbd9d49c7ea4d188a9d" class="tab" ><label for="b7e3526d28804cbd9d49c7ea4d188a9d-b68eae42c23144f787dc0c440ce2b6a5" >Windows</label>
+<input type="radio" id="bfb1d94fc2394769af571be278b4cb57-24168212a77e46a8bb7505bbb00ee154" name="bfb1d94fc2394769af571be278b4cb57" class="tab" checked><label for="bfb1d94fc2394769af571be278b4cb57-24168212a77e46a8bb7505bbb00ee154" >General</label>
+<input type="radio" id="bfb1d94fc2394769af571be278b4cb57-82ad9272613742d3be32690fca907543" name="bfb1d94fc2394769af571be278b4cb57" class="tab" ><label for="bfb1d94fc2394769af571be278b4cb57-82ad9272613742d3be32690fca907543" >Startup</label>
+<input type="radio" id="bfb1d94fc2394769af571be278b4cb57-4f989132d99345d792f739a66f5ea5af" name="bfb1d94fc2394769af571be278b4cb57" class="tab" ><label for="bfb1d94fc2394769af571be278b4cb57-4f989132d99345d792f739a66f5ea5af" >Android</label>
+<input type="radio" id="bfb1d94fc2394769af571be278b4cb57-0b5508caebdc4a8a9b365db660415667" name="bfb1d94fc2394769af571be278b4cb57" class="tab" ><label for="bfb1d94fc2394769af571be278b4cb57-0b5508caebdc4a8a9b365db660415667" >iOS</label>
+<input type="radio" id="bfb1d94fc2394769af571be278b4cb57-62c018bc28ad454bafce1eab86fba28f" name="bfb1d94fc2394769af571be278b4cb57" class="tab" ><label for="bfb1d94fc2394769af571be278b4cb57-62c018bc28ad454bafce1eab86fba28f" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
