--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -360,17 +360,20 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5c0589570cf94b0cb26954b4154b48d6-ce61291782304edbb86810867909a5ba" name="5c0589570cf94b0cb26954b4154b48d6" class="tab" checked><label for="5c0589570cf94b0cb26954b4154b48d6-ce61291782304edbb86810867909a5ba" >General</label>
-<input type="radio" id="5c0589570cf94b0cb26954b4154b48d6-b2d66620bdba467e9d36b5a219453d92" name="5c0589570cf94b0cb26954b4154b48d6" class="tab" ><label for="5c0589570cf94b0cb26954b4154b48d6-b2d66620bdba467e9d36b5a219453d92" >Startup</label>
-<input type="radio" id="5c0589570cf94b0cb26954b4154b48d6-e7fde3a1d81345fd8ede4da8c7a288c6" name="5c0589570cf94b0cb26954b4154b48d6" class="tab" ><label for="5c0589570cf94b0cb26954b4154b48d6-e7fde3a1d81345fd8ede4da8c7a288c6" >Android</label>
-<input type="radio" id="5c0589570cf94b0cb26954b4154b48d6-8437595e849c4d8c8d94dd84da438373" name="5c0589570cf94b0cb26954b4154b48d6" class="tab" ><label for="5c0589570cf94b0cb26954b4154b48d6-8437595e849c4d8c8d94dd84da438373" >iOS</label>
-<input type="radio" id="5c0589570cf94b0cb26954b4154b48d6-70ff629d18724fd0ad82885534751bda" name="5c0589570cf94b0cb26954b4154b48d6" class="tab" ><label for="5c0589570cf94b0cb26954b4154b48d6-70ff629d18724fd0ad82885534751bda" >Windows</label>
+<input type="radio" id="9aff803733ac4f6388001bbd8f6b5359-1088b9914b6f4a98acbd887a37415b3d" name="9aff803733ac4f6388001bbd8f6b5359" class="tab" checked><label for="9aff803733ac4f6388001bbd8f6b5359-1088b9914b6f4a98acbd887a37415b3d" >General</label>
+<input type="radio" id="9aff803733ac4f6388001bbd8f6b5359-25940e9a3a944443814074a2d68da81b" name="9aff803733ac4f6388001bbd8f6b5359" class="tab" ><label for="9aff803733ac4f6388001bbd8f6b5359-25940e9a3a944443814074a2d68da81b" >Startup</label>
+<input type="radio" id="9aff803733ac4f6388001bbd8f6b5359-860fe25708284a87aae622c6a9877429" name="9aff803733ac4f6388001bbd8f6b5359" class="tab" ><label for="9aff803733ac4f6388001bbd8f6b5359-860fe25708284a87aae622c6a9877429" >Android</label>
+<input type="radio" id="9aff803733ac4f6388001bbd8f6b5359-85ebeb25e02f40159bbde8ad98bc66cc" name="9aff803733ac4f6388001bbd8f6b5359" class="tab" ><label for="9aff803733ac4f6388001bbd8f6b5359-85ebeb25e02f40159bbde8ad98bc66cc" >iOS</label>
+<input type="radio" id="9aff803733ac4f6388001bbd8f6b5359-35b0ef591d3f4d80a751b339a87cc2cb" name="9aff803733ac4f6388001bbd8f6b5359" class="tab" ><label for="9aff803733ac4f6388001bbd8f6b5359-35b0ef591d3f4d80a751b339a87cc2cb" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
