--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -360,7 +360,10 @@
                                                             <a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v220">v2.2.0 (July 18, 2021)</a>
+                                                            <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -372,11 +375,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="32654fb1638043c5a73816c0cdb0c3bd-31e371fc3f734ba7a753713250ed7a42" name="32654fb1638043c5a73816c0cdb0c3bd" class="tab" checked><label for="32654fb1638043c5a73816c0cdb0c3bd-31e371fc3f734ba7a753713250ed7a42" >General</label>
-<input type="radio" id="32654fb1638043c5a73816c0cdb0c3bd-9be7306c456b4587942c70d40ac3d483" name="32654fb1638043c5a73816c0cdb0c3bd" class="tab" ><label for="32654fb1638043c5a73816c0cdb0c3bd-9be7306c456b4587942c70d40ac3d483" >Startup</label>
-<input type="radio" id="32654fb1638043c5a73816c0cdb0c3bd-164680ffae574af1aa1798f337f7f9e0" name="32654fb1638043c5a73816c0cdb0c3bd" class="tab" ><label for="32654fb1638043c5a73816c0cdb0c3bd-164680ffae574af1aa1798f337f7f9e0" >Android</label>
-<input type="radio" id="32654fb1638043c5a73816c0cdb0c3bd-88cc5ba14e0641bd94a030965375a704" name="32654fb1638043c5a73816c0cdb0c3bd" class="tab" ><label for="32654fb1638043c5a73816c0cdb0c3bd-88cc5ba14e0641bd94a030965375a704" >iOS</label>
-<input type="radio" id="32654fb1638043c5a73816c0cdb0c3bd-d3728ebb3a574601abaa78b1fdfc6358" name="32654fb1638043c5a73816c0cdb0c3bd" class="tab" ><label for="32654fb1638043c5a73816c0cdb0c3bd-d3728ebb3a574601abaa78b1fdfc6358" >Windows</label></li>
+<input type="radio" id="5233adc177944e79a6287d2484399a1b-a884c2d3e4664b7dba91969364159aa1" name="5233adc177944e79a6287d2484399a1b" class="tab" checked><label for="5233adc177944e79a6287d2484399a1b-a884c2d3e4664b7dba91969364159aa1" >General</label>
+<input type="radio" id="5233adc177944e79a6287d2484399a1b-6caf9c1ac3c94fa9991c76cadd19964b" name="5233adc177944e79a6287d2484399a1b" class="tab" ><label for="5233adc177944e79a6287d2484399a1b-6caf9c1ac3c94fa9991c76cadd19964b" >Startup</label>
+<input type="radio" id="5233adc177944e79a6287d2484399a1b-39f0f394665d4b4682e2246b555dac8b" name="5233adc177944e79a6287d2484399a1b" class="tab" ><label for="5233adc177944e79a6287d2484399a1b-39f0f394665d4b4682e2246b555dac8b" >Android</label>
+<input type="radio" id="5233adc177944e79a6287d2484399a1b-e8683f1f06374a0e85726e7766c6485a" name="5233adc177944e79a6287d2484399a1b" class="tab" ><label for="5233adc177944e79a6287d2484399a1b-e8683f1f06374a0e85726e7766c6485a" >iOS</label>
+<input type="radio" id="5233adc177944e79a6287d2484399a1b-542d49e7d0d4438892c9bfd34ee0fea9" name="5233adc177944e79a6287d2484399a1b" class="tab" ><label for="5233adc177944e79a6287d2484399a1b-542d49e7d0d4438892c9bfd34ee0fea9" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
